--- a/login.html
+++ b/login.html
@@ -41,15 +41,19 @@
 <body class="text-center">
   <div class="container p-5">
     <form class="container">
+    <img class="mb-4" src="img/login.png" alt width="500" >
+      <h1> Por favor, ingrese sus datos</h1>
       <div class="form-group">
-        <label for="usuario">Usuario</label>
-        <input type="text" class="form-control" id="usuario" placeholder="Ingrese usuario">
+        <label for="usuario"></label>
+        <input type="text" class="form-control" id="usuario" placeholder="Ingrese nombre de usuario">
       </div>
       <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" class="form-control" id="email" placeholder="Ingrese email">
+        <label for="email"></label>
+        <input type="email" class="form-control" id="email" placeholder="Ingrese e-mail">
       </div>
       <button type="button" class="btn btn-primary" onClick="conectar();">Conectar</button>
+      <hr>
+      <p>Este sitio forma parte de Desarrollo Web - JAP - 2021</p>
     </form>
 
     <!-- Si esta conectado redirecciona a la pagina principal -->
