--- a/login.html
+++ b/login.html
@@ -42,14 +42,15 @@
   <div class="container p-5">
     <form class="container">
     <img class="mb-4" src="img/login.png" alt width="500" >
-      <h1> Por favor, ingrese sus datos</h1>
+      <h1> ¡Bienvenid@!</h1>
+        <h3> Por favor, ingrese sus datos</h3>
       <div class="form-group">
         <label for="usuario"></label>
         <input type="text" class="form-control" id="usuario" placeholder="Ingrese nombre de usuario">
       </div>
       <div class="form-group">
-        <label for="email"></label>
-        <input type="email" class="form-control" id="email" placeholder="Ingrese e-mail">
+        <label for="password"></label>
+        <input type="password" class="form-control" id="password" placeholder="Ingrese contraseña">
       </div>
       <button type="button" class="btn btn-primary" onClick="conectar();">Conectar</button>
       <hr>
