--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <a class="py-2 d-none d-md-inline-block" href="login.html">Unirse</a>
+        <button type="button" class="btn btn-primary" onClick="desconectar();">Desconectar</button>
       </div>
     </nav>
     <main role="main">
