--- a/login.html
+++ b/login.html
@@ -10,10 +10,19 @@
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+
+  <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="1201296412-il1ehirc85i9jotlkndi546k6m04jdtc.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <script src="js/login.js" charset="utf-8"></script>
+
+  <script src="js/init.js"></script>
+  <script src="js/login.js"></script>
+  
   <style>
     html, body{
       height: 100%;
@@ -41,32 +50,23 @@
 <body class="text-center">
   <div class="container p-5">
     <form class="container">
-    <img class="mb-4" src="img/login.png" alt width="500" >
-      <h1> ¡Bienvenid@!</h1>
+      <img class="mb-4" src="img/login.png" alt width="500" >
+        <h1> ¡Bienvenid@!</h1>
         <h3> Por favor, ingrese sus datos</h3>
-      <div class="form-group">
-        <label for="usuario"></label>
-        <input type="text" class="form-control" id="usuario" placeholder="Ingrese nombre de usuario">
-      </div>
-      <div class="form-group">
-        <label for="password"></label>
-        <input type="password" class="form-control" id="password" placeholder="Ingrese contraseña">
-      </div>
-      <button type="button" class="btn btn-primary" onClick="conectar();">Conectar</button>
-      <hr>
-      <p>Este sitio forma parte de Desarrollo Web - JAP - 2021</p>
+        <div class="form-group">
+          <label for="usuario"></label>
+          <input type="text" class="form-control" id="usuario" placeholder="Ingrese nombre de usuario">
+        </div>
+        <div class="form-group">
+          <label for="password"></label>
+          <input type="password" class="form-control" id="password" placeholder="Ingrese contraseña">
+        </div>
+        <button type="button" class="btn btn-primary" onClick="conectar();">Conectar</button>
+        <div class="g-signin2" data-onsuccess="onSignIn" data-theme="light"></div>
+        <hr>
+        <p>Este sitio forma parte de Desarrollo Web - JAP - 2021</p>
     </form>
-
-    <!-- Si esta conectado redirecciona a la pagina principal -->
-    <script>
-      let usuario=JSON.parse(localStorage.getItem("usuario"));
-      if(usuario.estado=='conectado'){
-        location.href='index.html';
-      }
-    </script>
+    <hr>
   </div>
-
-  <script src="js/init.js"></script>
-  <script src="js/login.js"></script>
 </body>
 </html>
