--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <script src="js/login.js"></script>
   </head>
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
@@ -22,7 +23,7 @@
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
         <a class="py-2 d-none d-md-inline-block" href="login.html">Unirse</a>
-        <button type="button" class="btn btn-primary" onClick="desconectar();">Desconectar</button>
+        <button type="button" class="btn btn-primary" onclick="desconectar();">Desconectar</button>
       </div>
     </nav>
     <main role="main">
