entrega 2 parte 3 hecha

--- a/login.html
+++ b/login.html
@@ -54,8 +54,8 @@
         <h1> ¡Bienvenid@!</h1>
         <h3> Por favor, ingrese sus datos</h3>
         <div class="form-group">
-          <label for="usuario"></label>
-          <input type="text" class="form-control" id="usuario" placeholder="Ingrese nombre de usuario">
+          <label for="nombre"></label>
+          <input type="text" class="form-control" id="nombre" placeholder="Ingrese nombre de usuario">
         </div>
         <div class="form-group">
           <label for="password"></label>
