--- a/index.html
+++ b/index.html
@@ -16,13 +16,21 @@
   </head>
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
+      
+
       <div class="container d-flex flex-column flex-md-row justify-content-between">
         <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
         <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-        <a class="py-2 d-none d-md-inline-block" href="login.html">Unirse</a>
+        <!--<a class="py-2 d-none d-md-inline-block" href="login.html">Unirse</a>-->  
+        <a class="py-2 d-none d-md-inline-block" id='nombre' style="color:white;" >
+          <script> 
+            let usuario=JSON.parse(localStorage.getItem("usuario"));
+            document.getElementById('nombre').innerHTML = "Esta conectad@: " + usuario.nombre; 
+          </script>
+        </a>
         <button type="button" class="btn btn-primary" onclick="desconectar();">Desconectar</button>
       </div>
     </nav>
