--- a/products.html
+++ b/products.html
@@ -13,6 +13,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <script src="init.js" type="text/javascript"></script>
+    <script src="products.js" type="text/javascript"></script>
   </head>
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
@@ -24,19 +25,40 @@
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
       </div>
     </nav>
-    <div class="container p-5">
       <main role="main" class="pb-5">
         <div class="text-center p-4">
-            <h2>Listado</h2>
+          <h2>Listado</h2>
         </div>
+
+        <div class="container">
+              <div class="row">
+                <div class="col text-right">
+                  <div class="col">
+                    <label for="buscador"> <i class="fa fa-search" aria-hidden="true"></i> <input class="mt-2 btn btn-light" type="search" onkeyup="buscar();" id="buscador" placeholder="Buscar"> 
+                    </label>
+                  </div>
+                  <div class="col">
+                    <label for="min"> <input type="number" class="form-control" onkeyup="filtrar();" id="min" placeholder="Minimo"> </label>
+                    <label for="max"> <input type="number" class="form-control" onkeyup="filtrar();" id="max" placeholder="Maximo"> </label>  
+                    <button class="btn btn-secondary" onclick="limpiar();">Limpiar</button>   
+                    </div>
+                    <div class="col">
+                      <button id="asc" class="btn btn-success" onclick="ascendente();">USD <i class="fas fa-sort-up" aria-hidden="true"></i></button> 
+                      <button class="btn btn-primary" id="desc" onclick="descendente();">USD <i class="fas fa-sort-down" aria-hidden="true"></i></button>
+                      <button id="asc_rel" class="btn btn-info" onclick="porRelevancia();">Relevancia  <i class="fa fa-thumbs-up" aria-hidden="true"></i></button> 
+                    </div>
+                    <br>
+                </div>   
+          </div>
+        </div>
+        
         <div class="container">
             <div class="row">
-                <div class="list-group" id="cat-list-container">
+                <div class="list-group" id="prod-list-container">
                 </div>
             </div>
         </div>
     </main>
-    </div>
     <footer class="text-muted bg-light">
       <div class="container">
         <p class="float-right">
