--- a/products.html
+++ b/products.html
@@ -12,8 +12,9 @@
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
-    <script src="init.js" type="text/javascript"></script>
-    <script src="products.js" type="text/javascript"></script>
+    <script src="js/init.js" type="text/javascript"></script>
+    <script src="js/products.js" type="text/javascript"></script>
+    <script src="js/products-info.js" type="text/javascript"></script>
   </head>
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
@@ -51,7 +52,9 @@
                 </div>   
           </div>
         </div>
-        
+      </div>
+      <div class="productListClass" id="productsList"></div>
+      </div>
         <div class="container">
             <div class="row">
                 <div class="list-group" id="prod-list-container">
@@ -71,7 +74,6 @@
     <div id="spinner-wrapper"><div class="lds-ring"><div></div><div></div><div></div><div></div></div></div>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/init.js"></script>
-    <script src="js/products.js"></script>
+    
   </body>
 </html>
