--- a/products.html
+++ b/products.html
@@ -14,7 +14,7 @@
     <link href="css/styles.css" rel="stylesheet">
     <script src="js/init.js" type="text/javascript"></script>
     <script src="js/products.js" type="text/javascript"></script>
-    <script src="js/products-info.js" type="text/javascript"></script>
+    <script src="js/product-info.js" type="text/javascript"></script>
   </head>
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
@@ -74,6 +74,8 @@
     <div id="spinner-wrapper"><div class="lds-ring"><div></div><div></div><div></div><div></div></div></div>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    
+    <script src="js/products.js" type="text/javascript"></script>
+    <script src="js/product-info.js" type="text/javascript"></script>
+    <script src="js/init.js" type="text/javascript"></script>
   </body>
 </html>
