--- a/comments.html
+++ b/comments.html
@@ -40,7 +40,9 @@
                           <p>Agregue su opinion:</p>
                           <label for="usuario"> <input type="text" class="form-control" id="usuario" placeholder="Escriba su nombre de usuario"> </label>
                           <br>
-                          <label for="comentario"> <input type="text" class="form-control" id="comentario" placeholder="Escriba su opinion"> </label>
+                          <label for="comentario"> <input type="text" class="form-control" id="descripcion" placeholder="Escriba su opinion"> </label>
+                          <br>
+                          <label for="fecha"> <input type="date" class="form-control" id="dateTime" placeholder="dd/mm/yyyy"> </label>
                           <form>
                             <p class="clasificacion"> Puntuacion: 
                               <input id="radio1" type="radio" name="estrellas" value="5">
@@ -55,7 +57,7 @@
                               <label for="radio5">★</label>
                             </p>
                           </form>
-                          <button id="sub" class="btn btn-success">Guardar </button>
+                          <button id="sub" class="btn btn-success" onclick="submit();">Guardar</button>
                         </div>
                     </div>
                 </div>>
