--- a/product-info.html
+++ b/product-info.html
@@ -25,6 +25,24 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <!--<a class="py-2 d-none d-md-inline-block" href="login.html">Unirse</a>-->   
+        
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false"><span id=nombre><span class="glyphicon glyphicon-user"></span>
+            <script> 
+              let usuario=JSON.parse(localStorage.getItem("usuario"));
+              document.getElementById('nombre').innerHTML = "Esta conectad@ " + usuario.nombre; 
+            </script></span>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right bg-dark">
+            <button type="button" class="btn btn-dark text-center" onclick="location.href='my-profile.html';"> Mi perfil <span class="glyphicon glyphicon-user"></span></button>
+            <div class="dropdown-divider"></div>
+            <button type="button" class="btn btn-dark text-center" onclick="location.href='cart.html';">Ver mi carrito <span class="glyphicon glyphicon-shopping-cart"></span> </button>
+            <div class="dropdown-divider"></div>
+            <button type="button" class="btn btn-dark text-center" href="login.html" onclick="desconectar();">Cerrar Sesión <span class="glyphicon glyphicon-user"></span></button>
+          </div>
+        </div>
+        </div>
       </div>
     </nav>
     <div class="container p-5">
@@ -64,6 +82,9 @@
                   <p class="text-center small text-muted"><span id="productSoldCount"></span> Articulos Vendidos</p>
                   <p class="text-center small text-muted">  Click <a href="comments.html"> aqui</a> para ver comentarios de usuarios </p>
                   <p class="text-center">Costo: <strong><span id="productCurrency"></span> <span id="productCost"></span></strong></p>
+                </div>
+                <div class="container" id="prod-related-list-container">
+                  <p class="text-center small text-muted"> Productos relacionados </p>
                 </div>
               
             </div>
