--- a/cart.html
+++ b/cart.html
@@ -61,14 +61,24 @@
       </div>
     </div>
   </nav>
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 5 (Fecha de entrega: 17/10/2021) y Entrega 7 (Fecha de entrega: 14/11/2021).</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+  <main>
+    <div class="text-center p-4">
+      <h2>Carrito de compras</h2>
+      <p class="lead">Verás aquí todos los prodctos que hayas agregado a tu carrito.</p>
     </div>
-  </div>
+    <div class="container">
+      <div id="articlesHTML">
+        <p>Aún no tienes nada en el carrito</p>
+      </div>
+    </div>
+    <div id="subtotalHTML"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+  </main>
+  
   <div id="spinner-wrapper">
     <div class="lds-ring">
       <div></div>
