--- a/product-info.html
+++ b/product-info.html
@@ -83,8 +83,9 @@
                   <p class="text-center small text-muted">  Click <a href="comments.html"> aqui</a> para ver comentarios de usuarios </p>
                   <p class="text-center">Costo: <strong><span id="productCurrency"></span> <span id="productCost"></span></strong></p>
                 </div>
-                <div class="container" id="prod-related-list-container">
-                  <p class="text-center small text-muted"> Productos relacionados </p>
+                <div>
+                  <p class="card-text"> <strong>Productos Relacionados</strong></p>
+                  <span id="prod-related-list-container"></span>
                 </div>
               
             </div>
