--- a/product-info.html
+++ b/product-info.html
@@ -15,6 +15,7 @@
     <link href="css/styles.css" rel="stylesheet">
     <script src="js/product-info.js" type="text/javascript"></script>
     <script src="js/init.js" type="text/javascript"></script>
+    <script src="js/login.js"></script>
   </head>
 
   <body>
