--- a/products.html
+++ b/products.html
@@ -15,6 +15,7 @@
     <script src="js/init.js" type="text/javascript"></script>
     <script src="js/products.js" type="text/javascript"></script>
     <script src="js/product-info.js" type="text/javascript"></script>
+    <script src="js/login.js"></script>
   </head>
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
